[package]
name = "es-operations"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
structopt = { version = "0.3"}
log = "0.4.14"
env_logger = "0.9.0"
